add swag file users
